--- a/myblog/static/css/style.css
+++ b/myblog/static/css/style.css
@@ -41,7 +41,6 @@ textarea { overflow:auto; }
 
 #content { width: 905px; }
 
-.highlight {  }
 .highlight h3 { margin: 0 0 9px 0; }
 .highlight p { padding: 0 0 11px 0; }
 .highlight img { margin: 4px 12px 0 12px; }
@@ -66,3 +65,31 @@ textarea { overflow:auto; }
 #footer { font-family: Arial, sans-serif; font-size: 11px; line-height: 14px; color: #7f7f7f; padding: 18px 27px 20px 38px; }
 #footer a{ color: #7f7f7f; }
 
+.form-comment{
+    font-size: 18px;
+}
+.form-comment label{
+    margin: 10px 10px;
+}
+.form-comment input{
+    border-radius: 15px;
+    padding: 15px;
+    height: 50px;
+    width: 250px;
+}
+.form-comment textarea{
+    border-radius: 15px;
+    padding: 15px;
+    height: 150px;
+    width: 100%;
+    resize: vertical;
+}
+.form-comment div{
+    margin: 10px;
+}
+.view-comment{
+    padding: 10px;
+    margin: 10px;
+    font-size: 18px;
+    border-radius: 15px;
+}
